# librarian2

./: README.md  pyproject.toml
docs/raw/: 0001__initial-notes.txt  0002__librarian2-registry-schema.json  0003__additional-thoughts_2026-03-08.txt  0004__wing-cat-generated_program-design.json  0005__program-intention.json  0006__program-architecture.json  0007__claudes-progress-report_2026-03-08.json  0008__additions-to-claudes-progress_2026-03-08.json  0009__details-on-type-system.json
src/librarian2/: _entry.py  dispatch.py  patchboard.py  registry_io.py  state.py
src/librarian2/editors/: _common.py  file.py  folder.py  json_file.py  raw.py  selector.py  url.py
src/librarian2/reducers/: entry.py  registry.py  script.py  ui_state.py
src/librarian2/scripts/: runner.py
src/librarian2/ui/: editor_pane.py  index_pane.py  main_window.py  menus.py  status_bar.py  theme.py
