[project]
name = "librarian2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lionscliapp",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
librarian2 = "librarian2._entry:main"
